--- a/_gulp/_sass/1-base/_base.sass
+++ b/_gulp/_sass/1-base/_base.sass
@@ -150,6 +150,7 @@ a, .link, .link-underline
         color: $primary-color
   &--main
     min-height: 500px
+    padding-top: 30px
 
 .container
   margin: 0 auto
@@ -166,6 +167,10 @@ a, .link, .link-underline
     text-align: left
   &-right, &--right
     text-align: right
+  &-upper, &--upper
+    text-transform: uppercase !important
+  &-lower, &--lower
+    text-transform: lowercase !important
 
 /* loader */
 .loader
