--- a/_gulp/_sass/2-layout/_footer.sass
+++ b/_gulp/_sass/2-layout/_footer.sass
@@ -30,6 +30,8 @@
       line-height: 1.5
       // white-space: nowrap
       width: 280px
+    svg
+      display: block
 
 .copyright
   float: right
