--- a/_gulp/_sass/2-layout/_header.sass
+++ b/_gulp/_sass/2-layout/_header.sass
@@ -23,6 +23,10 @@
       width: 163px
       height: 33px
       background: url('../img/logo.png') left top no-repeat
+    &--main
+      opacity: 0
+      &:hover
+        opacity: 0
 
   &__lang
     font-size: rem(13)
