--- a/_gulp/_jade/_include/_footer.jade
+++ b/_gulp/_jade/_include/_footer.jade
@@ -15,7 +15,7 @@ footer.footer
 
 
           div
-            span.span Если у вас возникают вопросы связанные непосредственно с веб-сайтом или процессом  поиска/покупки запчастей, пожалуйста,
+            span.span Если у вас возникают вопросы связанные непосредственно с веб-сайтом или процессом  поиска/покупки запчастей, пожалуйста,&nbsp;
               a(href="#") пишите
               | .
             .copyright © 2016 arm.group Все права защищены
