--- a/_gulp/_jade/ua-product.jade
+++ b/_gulp/_jade/ua-product.jade
@@ -2,8 +2,8 @@ doctype
 
 html(lang="ru")
 
-  -var active = 'Детали заказа' //активный пункт меню, список в header.jade
-  -var pageTitle = 'ЛЧ Детали заказа' + ' - Биржа автозапчастей' //title страницы для генерации верстки
+  -var active = 'Продукция' //активный пункт меню, список в header.jade
+  -var pageTitle = 'ЛЧ Продукция' + ' - Биржа автозапчастей' //title страницы для генерации верстки
   -var headerBlock = 'ЛЧ'
 
   include ./_include/_head
@@ -42,8 +42,12 @@ html(lang="ru")
     .content
       .container
 
+        a(href="#").user__menu
+          i.ion-grid
+          span Меню личного кабинета
+
         .row
-          .col-sm-3.col-xs-12.hidden-xs
+          .col-sm-3.col-xs-12.user__navigation
 
             // Profile photo
             .profile__photo
@@ -62,96 +66,59 @@ html(lang="ru")
                 li: a(href="#") Мои Настройки
 
           .col-sm-9.col-xs-12
-            h1
+            h1 
               i.icon.icon--head
-              | Заказ&nbsp;
-              strong №56465453
-
-            table.table-basic.table-basic--data
-              thead
-                tr
-                  th № заказа
-                  th Номер
-                    span.hidden-xs.hidden-sm &nbsp; детали
-                  th Статус
-                  th Название/Коммен-рий
-                    span.hidden-xs.hidden-sm &nbsp; мен-ра
-                  th.hidden-xs.hidden-sm Срок, дн.
-                  th.hidden-xs.hidden-sm Кол-во
-                  th.hidden-xs.hidden-sm Цена
-                  th Сумма
-              tbody
-                tr.tr--separator-top
-                  td(colspan="2") &nbsp;
-                tr
-                  td 11654534
-                  td MK016
-                  td
-                    .info-status.info-status--inwork В работе
-                  td Амортизатора компл. монтажный
-                  td.hidden-xs.hidden-sm 12
-                  td.hidden-xs.hidden-sm 20
-                  td.nowrap.hidden-xs.hidden-sm 654 руб
-                  td.nowrap 6 546 574 руб
-                tr
-                  td 11654534
-                  td MK016
-                  td
-                    .info-status.info-status--cancel Отменен
-                  td Амортизатора компл. монтажный
-                  td.hidden-xs.hidden-sm 12
-                  td.hidden-xs.hidden-sm 20
-                  td.nowrap.hidden-xs.hidden-sm 654 руб
-                  td.nowrap 6 546 574 руб
-                tr
-                  td 11654534
-                  td MK016
-                  td
-                    .info-status.info-status--custom Под заказ
-                  td Амортизатора компл. монтажный
-                  td.hidden-xs.hidden-sm 12
-                  td.hidden-xs.hidden-sm 20
-                  td.nowrap.hidden-xs.hidden-sm 654 руб
-                  td.nowrap 6 546 574 руб
-                tr
-                  td 11654534
-                  td MK016
-                  td
-                    .info-status.info-status--issued Выдан
-                  td Амортизатора компл. монтажный
-                  td.hidden-xs.hidden-sm 12
-                  td.hidden-xs.hidden-sm 20
-                  td.nowrap.hidden-xs.hidden-sm 654 руб
-                  td.nowrap 6 546 574 руб
-                tr
-                  td 11654534
-                  td MK016
-                  td
-                    .info-status.info-status--inwork В работе
-                  td Амортизатора компл. монтажный
-                  td.hidden-xs.hidden-sm 12
-                  td.hidden-xs.hidden-sm 20
-                  td.nowrap.hidden-xs.hidden-sm 654 руб
-                  td.nowrap 6 546 574 руб
-                tr
-                  td 11654534
-                  td MK016
-                  td
-                    .info-status.info-status--inwork В работе
-                  td Амортизатора компл. монтажный
-                  td.hidden-xs.hidden-sm 12
-                  td.hidden-xs.hidden-sm 20
-                  td.nowrap.hidden-xs.hidden-sm 654 руб
-                  td.nowrap 6 546 574 руб
-
-            .text-center
-              //- a(href="#").btn.btn--more
-              //-   i.ion-refresh
-              //-   | Загрузить еще 10 позиций
-
-              button(type="submit").btn.btn--more
-                i.ion-refresh
-                | Загрузить еще 10 позиций
+              strong VW 
+              |/ 
+              strong AUDI 044121058A
+              
+            .user__product.table
+              div.table__cell
+                a(href="./tmp/product.png").image-popup.user__product__img
+                  img(src="./tmp/product.png", alt="").img-responsive
+              
+              div.table__cell
+                table.table-basic.table-basic--thin
+                  thead
+                    tr
+                      th(colspan="2").text--upper.text--left Главная Информация
+                  tbody
+                    tr.tr--separator-top
+                      td(colspan="2") &nbsp;
+                    tr
+                      td Номер детали:
+                      td
+                        strong 044121058A
+                    tr
+                      td Имя производитель: 
+                      td
+                        strong VW / AUDI
+                    tr
+                      td Вес: 
+                      td
+                        strong 0,05 кг
+                    tr
+                      td Цена:	
+                      td
+                        strong 589 руб
+                    tr
+                      td Минимальный объем заказа:
+                      td
+                        strong 0
+                    tr
+                      td Срок поставки:
+                      td
+                        strong 10 дней
+                    tr
+                      td Дата:
+                      td
+                        strong 12.10.2016
+                    tr.tr--separator-top
+                      td(colspan="2") &nbsp;
+                    tr
+                      th(colspan="2").text--upper.text--left Комментарий в прайс-листе:
+                    tr
+                      td(colspan="2") SCHLAUCH
 
     include ./_include/_footer
     //- div(style="height: 900px; background-color: #000")
