--- a/_gulp/_jade/_include/_head.jade
+++ b/_gulp/_jade/_include/_head.jade
@@ -35,5 +35,6 @@ head
     
   link(rel="stylesheet", href="./js/libs/magnific-popup/magnific-popup.css")
   link(rel="stylesheet", href="./js/libs/sumoselect/sumoselect.css")
+  link(rel="stylesheet", href="./js/libs/nanoscroller/nanoscroller.css")
   
   link(rel='stylesheet', href='./css/main.css')
