--- a/_gulp/_jade/news-document.jade
+++ b/_gulp/_jade/news-document.jade
@@ -39,6 +39,26 @@ html(lang="ru")
             p Подробностей совсем немного: мировую премьеру Mazda CX-5 справит на предстоящем автошоу в американском Лос-Анджелесе, которое стартует 18 ноября. Пресс-конференция, где впервые покажут новинку, состоится 16 ноября.
             p В официальном сообщении, которое сопровождает первый тизер, отмечается, что создатели кроссовера продолжили опираться на фирменную дизайн-философию Kodo. Кроме того, заявлено, что модель изменится в размерах, а также обзаведётся новыми системами и технологиями.
             
+            ul.list
+              li Список ul/li (14px, Light, 26 px line-height)
+              li Список ul/li (14px, Light, 26 px line-height)
+              li Список ul/li (14px, Light, 26 px line-height)
+            
+            ol.list
+              li Список ol/li (14px, Light, 26 px line-height)
+              li Список ol/li (14px, Light, 26 px line-height)
+              li Список ol/li (14px, Light, 26 px line-height)
+              
+            ul.list.list--mark
+              li Список ul/li (14px, Light, 26 px line-height)
+              li Список ul/li (14px, Light, 26 px line-height)
+              li Список ul/li (14px, Light, 26 px line-height)
+            
+            ol.list.list--mark
+              li Список ol/li (14px, Light, 26 px line-height)
+              li Список ol/li (14px, Light, 26 px line-height)
+              li Список ol/li (14px, Light, 26 px line-height)
+            
             // Форма подписки
             .form.form__subscription
               form(action="#")
