--- a/_gulp/_sass/1-base/_variables.sass
+++ b/_gulp/_sass/1-base/_variables.sass
@@ -20,3 +20,4 @@ $font-roboto: 'RobotoRegular'
 $font-roboto-light: 'RobotoLight'
 $font-roboto-medium: 'RobotoMedium'
 $font-roboto-bold: 'RobotoBold'
+$font-roboto-thin: 'RobotoThin'
