--- a/_gulp/_sass/2-layout/_buttons.sass
+++ b/_gulp/_sass/2-layout/_buttons.sass
@@ -134,3 +134,15 @@
       .ion-refresh
         transform: rotate(180deg)
       color: $primary-color
+
+  &--auto-register
+    height: 70px
+    width: 100%
+    width: 516px
+    position: absolute
+    bottom: 80px
+    right: 100%
+    margin-right: -90px
+    z-index: 150
+    line-height: 70px
+    font-size: rem(16)
