--- a/_gulp/_jade/_include/_footer-js.jade
+++ b/_gulp/_jade/_include/_footer-js.jade
@@ -3,6 +3,7 @@
 script(src='./js/libs/magnific-popup/jquery.magnific-popup.min.js')
 script(src='./js/libs/bootstrap/bootstrap.min.js')
 script(src='./js/libs/sumoselect/jquery.sumoselect.min.js')
+script(src='./js/libs/nanoscroller/jquery.nanoscroller.min.js')
 
 
 //- Old browser
