--- a/_gulp/_sass/1-base/_base.sass
+++ b/_gulp/_sass/1-base/_base.sass
@@ -18,13 +18,16 @@ body
 html
   font-size: inherit
   line-height: 1.3
-  font-size: 16px
+  // font-size: 16px
+  // display: none
+  // background: red
 
 html,
 body
   height: 100%
   padding: 0
   margin: 0
+  // display: none
 
 body
   background: $color-white
@@ -149,8 +152,9 @@ a, .link, .link-underline
       h1, .h1
         color: $primary-color
   &--main
-    min-height: 500px
+    // min-height: 500px
     padding-top: 30px
+    padding-bottom: 100px
 
 .container
   margin: 0 auto
