--- a/_gulp/_sass/1-base/_font.sass
+++ b/_gulp/_sass/1-base/_font.sass
@@ -2,6 +2,7 @@
 @include font-face("RobotoLight", "../font/Roboto/RobotoLight/RobotoLight", $file-formats: eot woff ttf)
 @include font-face("RobotoMedium", "../font/Roboto/RobotoMedium/RobotoMedium", $file-formats: eot woff ttf)
 @include font-face("RobotoRegular", "../font/Roboto/RobotoRegular/RobotoRegular", $file-formats: eot woff ttf)
+@include font-face("RobotoThin", "../font/Roboto/RobotoThin/RobotoThin", $file-formats: woff woff2 ttf)
 
 // Ionicons, v2.0.0
 
