--- a/_gulp/_sass/2-layout/_menu.sass
+++ b/_gulp/_sass/2-layout/_menu.sass
@@ -256,3 +256,49 @@
       li
         &>a, &>span
           padding-right: 35px
+
+/**/
+.list
+  font-size: rem(14)
+  li
+    line-height: 1.85
+  &--mark
+    margin-left: 0
+    padding-left: 0
+    li
+      list-style: none
+      margin-left: 0
+      position: relative
+      padding-left: 30px
+
+ul.list--mark
+  li
+    &::before
+      content: "\f412"
+      position: absolute
+      font-family: "Ionicons"
+      left: 0
+      top: 3px
+      font-size: rem(22)
+      color: $color-blue
+      display: block
+      line-height: 1
+
+ol.list--mark
+  counter-reset: list
+  li
+    &::before
+      counter-increment: list
+      content: counter(list)
+      display: block
+      height: 20px
+      line-height: 21px
+      width: 20px
+      border-radius: 50%
+      background: $color-blue
+      color: $color-white
+      font-size: rem(10)
+      position: absolute
+      left: 0
+      top: 2px
+      text-align: center
