--- a/_gulp/_sass/2-layout/_buttons.sass
+++ b/_gulp/_sass/2-layout/_buttons.sass
@@ -146,3 +146,11 @@
     z-index: 150
     line-height: 70px
     font-size: rem(16)
+
+  &--chat
+    height: 40px
+    // line-height: 40px
+    padding-top: 6px
+    padding-bottom: 6px
+    width: 165px
+    font-size: rem(19)
