--- a/_gulp/_sass/2-layout/_forms.sass
+++ b/_gulp/_sass/2-layout/_forms.sass
@@ -54,6 +54,27 @@ button, html input[type=button], input[type=reset], input[type=submit]
         margin-left: 10px
         margin-top: -6px
 
+    &--chat
+      display: table
+      width: 100%
+      &>div
+        display: table-cell
+        vertical-align: middle
+        &:first-child
+          width: 100%
+        &.center
+          font-size: rem(25)
+          border-top: 1px solid #dddddd
+          border-bottom: 1px solid #dddddd
+
+          text-align: center
+          a
+            display: block
+            padding: 1px 20px
+            i
+              display: block
+              line-height: 0
+
   &-control, &__control
     display: block
     width: 100%
