--- a/_gulp/_sass/3-modules/_modules.sass
+++ b/_gulp/_sass/3-modules/_modules.sass
@@ -897,3 +897,26 @@
         padding-left: 20px
         padding-right: 20px
         white-space: nowrap
+
+  &__form
+    &__file
+      font-size: rem(14)
+      padding-left: 15px
+      color: $color-blue
+      margin-bottom: 10px
+      a
+        text-decoration: none
+        &:hover
+          color: $primary-color
+      i
+        margin-right: 10px
+        font-size: rem(20)
+        color: $color-red
+        vertical-align: -2px
+
+
+/**/
+html
+  &.is-active
+    // overflow: hidden
+    // position: fixed
